--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -13,10 +13,13 @@ dependencies:
     sdk: flutter
   logging: ^1.0.2
   intl: ^0.17.0
+
   flutter_localizations:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  freezed_annotation: ^2.1.0
+  json_annotation: ^4.6.0
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +27,10 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   lints: ^2.0.0
+
+  freezed: ^2.1.0+1
+  build_runner: ^2.2.0
+  json_serializable: ^6.3.1
 
 flutter:
   uses-material-design: true
