--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
 
+  flutter_riverpod: ^2.0.0-dev.9
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
