--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -18,9 +18,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  google_fonts: ^3.0.1
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
-
   flutter_riverpod: ^2.0.0-dev.9
 
 dev_dependencies:
