--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  flutter_svg: ^1.0.0
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   freezed_annotation: ^2.1.0
@@ -36,3 +37,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
