--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -34,6 +34,15 @@ dev_dependencies:
   freezed: ^2.1.0+1
   build_runner: ^2.2.0
   json_serializable: ^6.3.1
+  flutter_gen_runner: ^4.0.0
+
+flutter_gen:
+  output: lib/gen/ # Optional (default: lib/gen/)
+  line_length: 80 # Optional (default: 80)
+
+  # Optional
+  integrations:
+    flutter_svg: true
 
 flutter:
   uses-material-design: true
