--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
   flutter_riverpod: ^2.0.0-dev.9
+  day_night_time_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
