--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   flutter_riverpod: ^2.0.0-dev.9
   day_night_time_picker: ^1.1.2
 
+  firebase_core: ^1.20.0
+  firebase_crashlytics: ^2.8.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
