--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
 
   firebase_core: ^1.20.0
   firebase_crashlytics: ^2.8.6
+  firebase_auth: ^3.7.0
 
 dev_dependencies:
   flutter_test:
