--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -17,17 +17,22 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  flutter_svg: ^1.0.0
+
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
+  flutter_svg: ^1.0.0
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
   flutter_riverpod: ^2.0.0-dev.9
-  day_night_time_picker: ^1.1.2
+  go_router: ^4.3.0
+  
 
   firebase_core: ^1.20.0
   firebase_crashlytics: ^2.8.6
   firebase_auth: ^3.7.0
+
+  day_night_time_picker: ^1.1.2
+
 
 dev_dependencies:
   flutter_test:
