--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_crashlytics: ^2.8.6
   firebase_auth: ^3.7.0
   cloud_firestore: ^3.0.0
+  device_info_plus: ^3.2.3
 
 dev_dependencies:
   flutter_test:
