--- a/studrasp_requiem/pubspec.yaml
+++ b/studrasp_requiem/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   json_annotation: ^4.6.0
   flutter_riverpod: ^2.0.0-dev.9
   go_router: ^4.3.0
-  
+  shared_preferences: ^2.0.0
 
   firebase_core: ^1.20.0
   firebase_crashlytics: ^2.8.6
