--- a/studrasp_requiem/android/app/src/main/AndroidManifest.xml
+++ b/studrasp_requiem/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.studrasp_requiem">
+    package="com.zednull.studrasp">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
-        android:label="studrasp_requiem"
+        android:label="StudRasp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
