--- a/studrasp_requiem/macos/Runner/Configs/AppInfo.xcconfig
+++ b/studrasp_requiem/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = studrasp_requiem
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.studraspRequiem
+PRODUCT_BUNDLE_IDENTIFIER = com.com.zednull.studrasp
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
