--- a/studrasp_requiem/macos/Runner/GoogleService-Info.plist
+++ b/studrasp_requiem/macos/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.studraspRequiem</string>
+	<string>com.zednull.studrasp</string>
 	<key>PROJECT_ID</key>
 	<string>studrasp-4e58d</string>
 	<key>STORAGE_BUCKET</key>
